# Einstein

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitignore~  .lgtm.yml  .pre-commit-config.yaml  .travis.yml  BUILDING.md  BUILDING.md~  CMakeLists.new.txt  CMakeLists.txt  CMakeLists.txt~  CMakeSettings.json  ChangeLog  Doxyfile  Einstein.entitlements  ISSUE_TEMPLATE.md  README  README.Android.md  README.cmake.md  README.md  README.ne2000  ReleaseNotes.md  ReleaseText.md  entitlement.plist
Drivers/: .gitignore  CMakeLists.txt  Einstein.rex  Einstein.rex.original  Einstein.rex.src  EinsteinBatteryDriver.pkg  EinsteinInTranslator.pkg  EinsteinNativeCalls.pkg  EinsteinOutTranslator.pkg  EinsteinPlatformDriver.pkg  EinsteinRex.cpp  EinsteinRex.h  EinsteinScreenDriver.pkg  EinsteinSerialDriver.pkg  EinsteinSoundDriver.pkg  EinsteinStartupDriver.pkg  EinsteinTabletDriver.pkg  EinsteinVersionString.pkg  Glue.s  Makefile  NativePrimitives.s  PATStack.h  PAppleTalkStack.h  PBatteryDriver.h  PEinsteinInTranslator.cp  PEinsteinInTranslator.cpp  PEinsteinInTranslator.impl.h  PEinsteinInTranslator.impl.s  PEinsteinInTranslatorPrims.s  PEinsteinOutTranslator.cp  PEinsteinOutTranslator.cpp  PEinsteinOutTranslator.impl.h  PEinsteinOutTranslator.impl.s  PEinsteinOutTranslatorPrims.s  PInTranslator.h  PMainBatteryDriver.cp  PMainBatteryDriver.cpp  PMainBatteryDriver.impl.h  PMainBatteryDriver.impl.s  PMainBatteryDriverPrims.s  (+73 more)
Drivers/EinsteinPortEnabler/: CMakeLists.txt  main.cpp  portenabler.exp  portenabler.ld  portenabler.newt  portenabler.nprj  portenabler.pkg  portenabler.ver
Drivers/Glue/: Glue.sym  Makefile  Makefile~
Drivers/Headers/: NativeCallsDefines.h  PlatformGestalt.h  Version.h
Drivers/MacOS Serial Driver/: Info.plist  README.txt  SerialDriver.cpp  SerialDriver.h
Drivers/NE2000Driver/: FilesInBuild  Makefile  Makeout  NE2000.cp  NE2000.impl.h  NE2K  NE2K.pkg  Project Data
Drivers/NSRuntime/: Display Params.f  Einstein NS Runtime  Einstein NS Runtime.pkg  Handlers.f  Install & Remove.f  Main Layout  NIE Bindings.f  Native Global Functions.f  README  UserInfo.f  package.r
Drivers/NewtonRuntime/: NewtonPrivateAPIs.s  NewtonPublicAPIs.s  NewtonRuntime.cpp
Drivers/PrinterDriver/: EinsteinDriver.cp  EinsteinDriver.impl.h  EinsteinDriver.pf  FilesInBuild  Makefile  printerDriver.pkg
Drivers/TabletTest/: Install & Remove.f  Main View  TabletTest
Drivers/cmake/: newton-cross.cmake
Emulator/: CMakeLists.txt  CompatibilityWin32.cp  CompatibilityWin32.h  TARMProcessor.cp  TARMProcessor.cpp  TARMProcessor.h  TDMAManager.cp  TDMAManager.cpp  TDMAManager.h  TDiag.cpp  TDiag.h  TEmulator.cp  TEmulator.cpp  TEmulator.h  TFlash.cp  TFlash.cpp  TFlash.h  THashMapCache.h  TInterruptManager.cp  TInterruptManager.cpp  TInterruptManager.h  TMMU.cp  TMMU.cpp  TMMU.h  TMemory.cp  TMemory.cpp  TMemory.h  TMemoryConsts.h  TNativePrimitives.cp  TNativePrimitives.cpp  TNativePrimitives.h
Emulator/EinsteinAPI/: fixed_math.cp  fixed_math.h  fixed_math_stubs.cp  fixed_math_stubs.h  stubs.cp  stubs.h
Emulator/Files/: CMakeLists.txt  TCocoaFileManager.mm  TCocoaListenerWindow.h  TCocoaListenerWindow.mm  TFileManager.cp  TFileManager.cpp  TFileManager.h  TSnapshotFile.cpp  TSnapshotFile.h
Emulator/Host/: CMakeLists.txt  THostInfo.cp  THostInfo.cpp  THostInfo.h  UserInfoDefinitions.h  UserInfoDefinitionsLF.h
Emulator/JIT/: CMakeLists.txt  JIT.h  JITARM.cp  JITARM.h  JITARM_translate.cp  JITPPCMachO.cp  JITPPCMachO.h  JITPPCMachO.s  JITPerformance.h  TJIT.cp  TJIT.h  TJITCache.cp  TJITCache.cpp  TJITCache.h  TJITPage.cp  TJITPage.cpp  TJITPage.h  TJITPerformance.cp  TJITPerformance.cpp  TJITPerformance.h
Emulator/Log/: CMakeLists.txt  TBufferLog.cp  TBufferLog.cpp  TBufferLog.h  TFileLog.cp  TFileLog.cpp  TFileLog.h  TLog.cp  TLog.cpp  TLog.h  TRAMLog.cp  TRAMLog.cpp  TRAMLog.h  TSDLLog.cpp  TSDLLog.h  TStdOutLog.cp  TStdOutLog.cpp  TStdOutLog.h
Emulator/NativeCalls/: CMakeLists.txt  NativeCallsDefines.h  TNativeCalls.cp  TNativeCalls.cpp  TNativeCalls.h  TNativeiOSCalls.h  TNativeiOSCalls.mm  TObjCBridgeCalls.h  TObjCBridgeCalls.mm  TVirtualizedCalls.cp  TVirtualizedCalls.cpp  TVirtualizedCalls.h  TVirtualizedCallsPatches.cp  TVirtualizedCallsPatches.cpp  (+1 more)
K/: CMakeLists.txt  README.md  Trace.cpp  Trace.h
K/Crypto/: U3DES.cp  (+4 more)
Monitor/: CMakeLists.txt  TFLMonitor.cpp  TFLMonitor.h  TFLMonitorView.cpp  TFLMonitorView.h  TMacMonitor.h  TMacMonitor.mm  TMacMonitorView.h  TMacMonitorView.mm  TMonitor.cp  TMonitor.cpp  TMonitor.h  TMonitorCore.cp  TMonitorCore.cpp  TMonitorCore.h  TSymbolList.cp  TSymbolList.cpp  TSymbolList.h  UDisasm.cp  UDisasm.cpp  UDisasm.h
Toolkit/: CMakeLists.txt  TFLInspectorPanel.cpp  TFLInspectorPanel.h  TFLSampleScripts.cpp  TFLSampleScripts.fl  TFLSampleScripts.h  TFLScriptPanel.cpp  TFLScriptPanel.h  TFLTerminalPanel.cpp  TFLTerminalPanel.h  TFLToolkit.cpp  TFLToolkit.h  TFLToolkitUI.cpp  TFLToolkitUI.fl  TFLToolkitUI.h  TProjectFile.cpp  TProjectFile.h  TScriptFile.cpp  TScriptFile.h  TTkElement.cpp  TTkElement.h  TTkHelpText.html  TTkProject.cpp  TTkProject.h  TTkScript.cpp  TTkScript.h  TToolkit.cpp  TToolkit.h  TToolkitFile.cpp  TToolkitFile.h  TToolkitPlatform.cpp  TToolkitPlatform.h  TToolkitPrototypes.cpp  TToolkitPrototypes.h  TToolkitScriptExt.cpp  TToolkitScriptExt.h
app/: AndroidGlue.c  AndroidGlue.cp  AndroidGlue.cpp  AndroidGlue.h  CMakeLists.txt  Einstein_Prefix.pch  HTTPRequest.hpp  TAndroidApp.cp  TAndroidApp.cpp  TAndroidApp.h  TAndroidNativeApp.cp  TAndroidNativeApp.cpp  TAndroidNativeApp.h  TCLIApp.cp  TCLIApp.cpp  TCLIApp.h  TCocoaAppController.h  TCocoaAppController.mm  TCocoaFileManager.h  TCocoaFileManager.mm  TCocoaListenerWindow.h  TCocoaListenerWindow.mm  TCocoaMonitorController.h  TCocoaMonitorController.mm  TCocoaPathHelper.h  TCocoaPathHelper.mm  TCocoaROMDumperController.h  TCocoaROMDumperController.mm  TCocoaSetupController.h  TCocoaSetupController.mm  TCocoaUserDefaults.h  TEinsteinApplication.h  TEinsteinApplication.mm  TFLApp.cp  TFLApp.cpp  TFLApp.h  TFLAppUI.cpp  TFLAppUI.fl  TFLAppUI.h  TFLAppWindow.cpp  (+31 more)
(+3123 files in other folders)
